# cmake-lib-c-style

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
complexNumberLib-c-style/: CMakeLists.txt
complexNumberLib-c-style-consumer/: CMakeLists.txt  main.cpp
complexNumberLib-c-style/cmake/: complexNumbersConfig.cmake.in
complexNumberLib-c-style/complexNumberLib/: CMakeLists.txt  complexNumbers.cpp  complexNumbersImpl.cpp
complexNumberLib-consumer-c/: CMakeLists.txt  README.md  main.c
complexNumberLib-consumer-cpp/: README.md  main.cpp
complexNumberLib-consumer-js/: index.js  package.json
complexNumberLib-consumer-python/: README.md  complex_test.py
complexNumberLib-consumer-rust/: Cargo.toml  README.md  build.rs
complexNumberLib-consumer-rust/src/: lib.rs  main.rs
complexNumberLib-consumer-zig/: README.md  build.zig
complexNumberLib-consumer-zig/src/: main.zig
complexNumberLib/complexNumberLib/: CMakeLists.txt  complexNumbers.cpp
generated_libs/complexNumber/lib/: complexNumbers.lib  complexNumbersd.lib
generated_libs/complexNumber/lib/cmake/complexNumbers/: complexNumbersConfig.cmake  complexNumbersTargets-debug.cmake  complexNumbersTargets-release.cmake  complexNumbersTargets.cmake
src/: main.cpp
